--- a/Watchlist.html
+++ b/Watchlist.html
@@ -530,78 +530,6 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
-              src="https://www.themoviedb.org/t/p/original/7atMCqRaDpAOnGsteTRm17zmvN3.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">The Bone Collector</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">1999</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
-              src="https://www.themoviedb.org/t/p/original/bUeiwBQdupBLQthMCHKV7zv56uv.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">Training Day</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">2001</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
               src="https://www.themoviedb.org/t/p/original/z8WqDIUC00TPX6U24ah0C7IMEKf.jpg"
               class="movie-poster"
             />
@@ -642,42 +570,6 @@
               class="movie-poster"
             />
             <h2 class="movie-title">The Thin Red Line</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">1998</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
-              src="https://www.themoviedb.org/t/p/original/6gDMQwnWPQfk0IqnkZHkrNSPQY4.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">Dark City</h2>
             <div class="movie-rating">
               <div class="ratings-container">
                 <span class="movie-rating-text"
@@ -3045,6 +2937,186 @@
                 >
               </div>
               <span class="movie-year-text">1995</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/p27Ro6UHSV7D6nnYhEwxP04hz2X.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Mortal Kombat</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> TBA</span
+                >
+              </div>
+              <span class="movie-year-text">1995</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/vgpXmVaVyUL7GGiDeiK1mKEKzcX.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Jumanji</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> TBA</span
+                >
+              </div>
+              <span class="movie-year-text">1995</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/7oWY8VDWW7thTzWh3OKYRkWUlD5.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Django Unchained</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> TBA</span
+                >
+              </div>
+              <span class="movie-year-text">2012</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/hP73YMCYZPipRhPeApeFYMEWKVF.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Kiss the Girls</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> TBA</span
+                >
+              </div>
+              <span class="movie-year-text">1997</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/cpczHLHgMdCYhXtfO8WMeu2bQKq.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Along Came a Spider</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> TBA</span
+                >
+              </div>
+              <span class="movie-year-text">2001</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
